# mustard-cli

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  FindGlib2.cmake  FindLibSecret.cmake  NOTICE  README.md
.github/workflows/: build.yml
doc/: DI.puml  changes.puml  commentExtractor.puml  componentView.puml  context.puml  startReview.puml  startWorkflow.puml  stopWorkflow.puml  submitReview.puml
lib/gmock-1.7.0/: CMakeLists.txt
lib/gmock-1.7.0/gmock/: gmock-actions.h  gmock-cardinalities.h  gmock-generated-actions.h  gmock-generated-function-mockers.h  gmock-generated-matchers.h  gmock-generated-nice-strict.h  gmock-matchers.h  gmock-more-actions.h  gmock-more-matchers.h  gmock-spec-builders.h  gmock.h
lib/gmock-1.7.0/gmock/internal/: gmock-generated-internal-utils.h  gmock-internal-utils.h
lib/poorMansDi/: .gitignore  CMakeLists.txt  README.md
lib/poorMansDi/example/: CMakeLists.txt  Techday.cpp  Techday.h  TechdayConfiguration.cpp  TechdayConfiguration.h  main.cpp
lib/poorMansDi/example/Coffee/: Coffee.h
lib/poorMansDi/example/CoffeeMachines/: Barista.cpp  Barista.h  CoffeeMaker.h  KlixMachine.cpp  KlixMachine.h
lib/poorMansDi/src/: CMakeLists.txt  Common.h  Depend.h  Dependency.h  DependencyContainer.cpp  DependencyContainer.h  Provide.h
lib/poorMansDi/tests/: AllTests.cpp  CMakeLists.txt  InitTests.cpp  InitTests.h  IntegrationTests.cpp  TestDependencyInjection.cpp  TestFilterHandling.cpp  TestFilterHandling.h  UnitTests.cpp
src/: CHANGELOG.md
src/main/: main.cpp
src/main/authentication/: AuthenticationProvider.h  AuthenticationProviderImpl.cpp  AuthenticationProviderImpl.h
src/main/bitbucket/: BitBucketClient.h  BitBucketClientException.h  BitBucketClientImpl.cpp  BitBucketClientImpl.h  BitBucketCommentUploader.cpp  BitBucketCommentUploader.h  BitBucketConfigGuesser.cpp  BitBucketConfigGuesser.h  BitBucketConfiguration.cpp  BitBucketConfiguration.h  PullRequest.h  PullRequestFormatter.cpp  PullRequestFormatter.h
src/main/bitbucket/model/: PullRequest.h  ReviewStatus.h  Reviewer.h  User.h
src/main/comments/: CommenExtractor.h  CommentAppender.cpp  CommentAppender.h  CommentConsumer.h  CommentExtractorImpl.cpp  CommentExtractorImpl.h  Comments.cpp  Comments.h  FileComments.cpp  FileComments.h  LineComment.cpp  LineComment.h  Tag.h  TagExtractor.cpp  TagExtractor.h  Todo.h
src/main/comments/commentState/: CommentState.h  CommentStateListener.h  LineClassifier.cpp  LineClassifier.h  LineConsumer.cpp  LineConsumer.h  RegexMatcher.h
src/main/comments/commentState/lineConsumers/: ContextDefinitionConsumer.cpp  ContextDefinitionConsumer.h  FileDefinitionConsumer.cpp  FileDefinitionConsumer.h  FileDiffLineConsumer.cpp  FileDiffLineConsumer.h  MultiLineCommentConsumer.cpp  MultiLineCommentConsumer.h
src/main/comments/commentState/states/: ContextDefinitionState.cpp  ContextDefinitionState.h  DiffHeaderState.cpp  DiffHeaderState.h  FileDefinitionState.cpp  FileDefinitionState.h  FileDiffState.cpp  FileDiffState.h  MultiLineCommentReplyState.cpp  MultiLineCommentReplyState.h  MultiLineCommentState.cpp  MultiLineCommentState.h
src/main/credentials/: CredentialProvider.h  Credentials.h  GnomeKeyringCredentialProvider.cpp  GnomeKeyringCredentialProvider.h  LibSecretCredentialProvider.cpp  LibSecretCredentialProvider.h
src/main/error/: MustardException.h
src/main/git/: Commitish.h  GitClient.h  GitClientException.h  GitClientImpl.cpp  GitClientImpl.h
src/main/system/: CommandResult.cpp  CommandResult.h  CommandRunner.cpp  CommandRunner.h  HttpClient.cpp  HttpClient.h  HttpResponse.h  LinuxCommandRunner.cpp  LinuxCommandRunner.h  TextTable.cpp  TextTable.h  UserChoice.h  UserConfirmation.h
src/main/workflow/: AutoconfWorkflow.cpp  AutoconfWorkflow.h  CommandlineConfiguration.cpp  CommandlineConfiguration.h  InboxWorkflow.cpp  InboxWorkflow.h  InfoWorkflow.cpp  InfoWorkflow.h  PasswdWorkflow.cpp  PasswdWorkflow.h  StartReviewWorkflow.cpp  StartReviewWorkflow.h  StopReviewWorkflow.cpp  StopReviewWorkflow.h  Workflow.h  WorkflowException.h  WorkflowFactory.cpp  WorkflowFactory.h
src/test/: main.cpp
src/test/CommandRunner/: TestCommandRunner.cpp  TestLinuxCommandRunner.cpp
src/test/bitbucket/: TestBitBucketClient.cpp  TestBitBucketCommentUploader.cpp  TestBitbucketConfigGuesser.cpp
src/test/comments/: CommentMatcher.cpp  CommentMatcher.h  GitClientForTest.h  TestCommentAppender.cpp  TestCommentExtractor.cpp  TestTagExtractor.cpp
src/test/comments/commentState/: TestLineClassifier.cpp
src/test/comments/commentState/lineConsumers/: testMultiLineCommentConsumer.cpp
src/test/git/: GitTestEnvironment.cpp  GitTestEnvironment.h  TestGitClientImpl.cpp
src/test/system/: HttpClientForTest.h
